Formatting cleanup for TIP 461

--- a/tip/461.md
+++ b/tip/461.md
@@ -14,11 +14,12 @@
 # Abstract
 
 This TIP proposes to complete the separation between string and numeric
-comparison operations in [expr] and related commands \([for], [if],
-[while], etc.\). It introduces new comparison operators **ge**, **gt**,
+comparison operations in **expr** and related commands \(**for**, **if**,
+**while**, etc.\). It introduces new comparison operators **ge**, **gt**,
 **le**, and **lt**, \(along with the corresponding commands in the
-**::tcl::mathop** namespace\), and encourages programmers to restrict the six operators **==**, **>=**, **>**, **<=**, **<** and **!=** to comparisons of numeric
-values.
+**::tcl::mathop** namespace\), and encourages programmers to restrict the six
+operators **==**, **>=**, **>**, **<=**, **<** and **!=** to comparisons of
+numeric values.
 
 # Rationale
 
@@ -27,7 +28,7 @@ numeric and string values. These operators behave as expected if both their
 arguments are numeric: they compare values on the real number line. Hence, 15
 < 0x10 < 0b10001. Similarly, if presented with non-numeric strings, they
 compare the strings in lexicographic order, as a programmer might expect:
-"bambam" < "barney" < "betty" < "fred".
+"`bambam`" < "`barney`" < "`betty`" < "`fred`".
 
 Trouble arises, however, when numeric and non-numeric strings are compared.
 The rule for comparison is that mixed-type comparisons like this are treated
@@ -65,7 +66,7 @@ begin conversion as soon as possible. Use of the **==**, **>=**,
 values shall immediately be deprecated.
 
 The six string compare operators shall be declared to function so that
-their results are the same as the results of [string compare]:
+their results are the same as the results of **string compare**:
 
 	    {$a lt $b}  <=> {[string compare $a $b] <  0}
 	    {$a le $b}  <=> {[string compare $a $b] <= 0}
@@ -74,7 +75,7 @@ their results are the same as the results of [string compare]:
 	    {$a gt $b}  <=> {[string compare $a $b] >  0}
 	    {$a ge $b}  <=> {[string compare $a $b] >= 0}
 
-It is also intended that any future changes to [string compare]
+It is also intended that any future changes to **string compare**
 \(for example, a hypothetical change to make it follow Unicode collation
 semantics\) will have the corresponding effect on these six operators.
 
@@ -132,7 +133,7 @@ attempts to address them.
       is a concern that this is a less-than-effective use of a limited
       resource._
 
-	    > The limit is self-imposed, in an effort to make the nodes of an
+      The limit is self-imposed, in an effort to make the nodes of an
       expression parse tree fit in exactly 16 bytes \(or four int's\). It is far
       from obvious that this pretty size is actually useful. Few expressions
       are more than a few dozen parse nodes, and typical expressions are not
@@ -145,35 +146,35 @@ attempts to address them.
 
 		 expr {"foo"}
 
-	    > and
+      and
 
 		 set x foo; expr {$x}
 
-	     > both work, while
+      both work, while
 
 		 expr {foo}
 
-	     > is an invalid bareword is arguably surprising.
+      is an invalid bareword is arguably surprising.
 
-	    > Nevertheless, we have committed to the approach with the **eq**,
+      Nevertheless, we have committed to the approach with the **eq**,
       **ne**, **in** and **ni** operators. These are unlikely to go
       away. Adding **lt**, **le**, **gt** and **ge** will make this
       problem no better nor worse.
 
-	    > Moreover, the language of [expr] is not the same as Tcl. It does not
+      Moreover, the language of **expr** is not the same as Tcl. It does not
       strip comments, parse into words, and apply Tcl's precise substitution
       rules - and it would be surprising if it did!  There are other "little
       languages" throughout Tcl - regular expressions, glob patterns, assembly
-      code, and so on. [expr] is one among many.
+      code, and so on. **expr** is one among many.
 
-   3. _There is concern that [expr], which was originally intended almost
+   3. _There is concern that **expr**, which was originally intended almost
       exclusively for numeric calculations, is being abused with string
       arguments and possibly string results._
 
-	    > The author of this TIP contends that we introduced string values to
-      [expr] a long time ago, certainly by the time that the **eq**,
+      The author of this TIP contends that we introduced string values to
+      **expr** a long time ago, certainly by the time that the **eq**,
       **ne**, **in** and **ni** operations were introduced.  It is true
-      that the use of numeric conversions in [expr] is incoherent, as seen
+      that the use of numeric conversions in **expr** is incoherent, as seen
       in:
 
 		   % proc tcl::mathfunc::cat {args} { join $args {} }
@@ -182,27 +183,26 @@ attempts to address them.
 		   % expr {cat(0x1)}
 		   1
 
-	    > \(Bug [e7c21ed678] is another manifestation of this general
-      problem.\) Once again, adding additional string operations
-      that behave, with respect to data types, exactly the same
-      as ones that are already there will neither fix nor exacerbate
-      the general problem.
+      \(Bug [e7c21ed678](/tcl/tktview?name=e7c21ed678) is another
+      manifestation of this general problem.\) Once again, adding additional
+      string operations that behave, with respect to data types, exactly the
+      same as ones that are already there will neither fix nor exacerbate the
+      general problem.
 
-   4. _Because [expr] has no interpreted form, the operations must have
+   4. _Because **expr** has no interpreted form, the operations must have
       bytecode representations. The space of available bytecodes is under even
       more pressure than the space of available operators, and must not be
       squandered on operations that are duplicative of already-available
-      functionality such as [string compare]._
+      functionality such as **string compare**._
 
-	    > The obvious rebuttal is that [string compare] is already bytecoded.
+      The obvious rebuttal is that **string compare** is already bytecoded.
       There are no new operations required, merely a compiler that is smart
       enough to emit a short codeburst rather than a single bytecode. As an
       example, the code for the expression
 
 		   {$x lt $y}
 
-	    > could
-      be:
+      could be:
 
 		   (0) loadScalar1 %v0        # var "x"
 		   (2) loadScalar1 %v1        # var "y"
@@ -210,7 +210,7 @@ attempts to address them.
 		   (5) push1 0        # "0"
 		   (7) lt 
 
-	    > For the other string operators, only the last bytecode in the burst
+      For the other string operators, only the last bytecode in the burst
       would change.  No new bytecode operations are needed. In fact, this
       codeburst is identical code to that generated for the expression
 
@@ -219,4 +219,3 @@ attempts to address them.
 # Copyright
 
 This document has been placed in the public domain.
-
