--- a/tip/547.md
+++ b/tip/547.md
@@ -43,7 +43,7 @@ that Tk no longer needs to provide this encoding any more.
 
 # Compatibility
 
-This is fully upwards compatible, except when Tcl is compiled with -DTCL_UTF_MAX=6 (which is - actually - not supported).
+This is fully upwards compatible, except when Tcl is compiled with `-DTCL_UTF_MAX=6` (which is - actually - not supported).
 
 # Reference Implementation
 
