TIP 346 does *not* have an implementation at all.

--- a/tip/346.md
+++ b/tip/346.md
@@ -7,7 +7,6 @@
 	Post-History:   
 	Keywords:       Tcl,encoding,convertto,strict,Unicode,String,ByteArray
 	Tcl-Version:    8.7
-	Tcl-Ticket:     1665628
 -----
 
 # Abstract
@@ -23,8 +22,8 @@ according to the channel's encoding. Similarly, a conversion can occur
 on request of the ByteArray internal representation of an object, the target
 encoding being ISO8859-1. In both cases, for some
 combinations of Unicode char and target encoding, the mapping is lossy
-\(non-injective\). For example, the "e acute" character, and many of its
-cousins, is mapped to a "?" in the 'ascii' target encoding. Also, Unicode chars above \\u00FF get 'projected' onto their low byte in the ISO8859-1 ByteArray conversion.
+\(non-injective\). For example, the "`é`" character, and many of its
+cousins, is mapped to a "`?`" in the '**ascii**' target encoding. Also, Unicode chars above \\u00FF get 'projected' onto their low byte in the ISO8859-1 ByteArray conversion.
 
 This loss of information, in the first case, introduces unnoticed i18n
 mishandlings. In the second case, it makes it unreliable to do pure-ByteArray
@@ -38,7 +37,7 @@ This TIP proposes to make this loss conspicuous.
 
 For the first use case, the idea is to introduce a **-strict** option to
 **encoding convertto**, that would raise an explicit error when non-mappable
-characters are met. Lossy conversions during channel I/O would also fail if a **-strictencoding true** [fconfigure option] is set.
+characters are met. Lossy conversions during channel I/O would also fail if a **-strictencoding true** [fconfigure] option is set.
   For the second case, we simply want the conversion to
 fail, like does the Listification of an ill-formed list. In both cases, the
 change consists of letting the proper internal conversion routine like **SetByteArrayFromAny** return TCL\_ERROR.
@@ -51,7 +50,7 @@ in a completely hidden manner. Hence the global effect is a healthy one.
 
 # Reference Example
 
-See Bug 1665628 <https://sourceforge.net/support/tracker.php?aid=1665628> .
+See [Bug 1665628](/tcl/tktview/1665628).
 
 # Copyright
 
