CFV by DKF: 461, 521, 528, 532, 536

--- a/tip/461.md
+++ b/tip/461.md
@@ -4,7 +4,7 @@
 	Author:         Kevin Kenny <kennykb@acm.org>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        24-Jan-2017
 	Post-History:   
 	Keywords:       Tcl,expression
@@ -63,7 +63,7 @@ and should go in as soon as possible - no later than the next point
 release, but ideally even in a patchlevel - so that programmers can
 begin conversion as soon as possible. Use of the **==**, **>=**,
 **>**, **<=**, **<**, and **!=** for comparing non-numeric
-values shall immediately be deprecated.
+values can immediately be deprecated.
 
 The six string compare operators shall be declared to function so that
 their results are the same as the results of **string compare**:
