--- a/tip/521.md
+++ b/tip/521.md
@@ -2,7 +2,7 @@
 	Author:		Kevin B. Kenny <kevin.b.kenny@gmail.com>
 	State:		Draft
 	Type:		Project
-	Vote:		Pending
+	Vote:		In progress
 	Created:	21 October 2018
 	Post-History:
 	Tcl-Version:	8.7
