--- a/tip/528.md
+++ b/tip/528.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        05-Dec-2018
 	Post-History:   
 	Tcl-Version:    8.7
@@ -47,7 +47,7 @@ Since those fields are used to store untyped pointers, this is
 actually a bug-fix which should not need a TIP, but since it affects
 the documentation it doesn't hurt to provide this change in a TIP anyway.
 
-An implementation of this TIP can be found in the [\[offsetof\]](https://core.tcl.tk/tk/timeline?r=offsetof) branch.
+An implementation of this TIP can be found in the [\[offsetof\]](/tk/timeline?r=offsetof) branch.
 
 # Copyright
 
