--- a/tip/532.md
+++ b/tip/532.md
@@ -1,8 +1,8 @@
-# TIP 532: Re-implementation of event loop processing.
+# TIP 532: Re-implementation of event loop processing
 	Author:         Gregor Cramer <gcramer@sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        09-Jan-2019
 	Post-History:  
 	Keywords:       Tk, bind, event, event loop
