--- a/tip/536.md
+++ b/tip/536.md
@@ -2,7 +2,7 @@
 	Author:         Kevin Walzer <kw@codebykevin.com>
 	State:          Draft
 	Type:           Project
-	Vote:           
+	Vote:           In progress
 	Created:        29-March-2019
 	Post-History:   
 	Keywords:       Tk
@@ -16,11 +16,11 @@ This TIP proposes to modify Tk on macOS only in the area of Mac-specific IPC (in
 
 # Rationale
 
-Most Mac applications support platform-native API's that allow them to work cooperatively with other applications in processing data. The two primary API's are the [NSServices API](https://developer.apple.com/library/archive/documentation/Cocoa/Conceptual/SysServices/introduction.html#//apple_ref/doc/uid/10000101-SW1) and the [Apple Events API](https://developer.apple.com/documentation/applicationservices/apple_event_manager?language=objc). The Services API is similar to a Unix pipeline API where data may be sent from one application to another for processing in some form. The Apple Events API is a more complex mechanism where an application will expose one or many commands that can be accessed from other applications for sophisticated scripting. Tk has historically supported many of the Apple Event API's but not the Services API. This TIP proposes to add support for the Services API and additional commands and changes to the Apple Event API. It also proposes a utility command that will support Tk's platform integration. Finally, it proposes additional behaviors to the text, entry, and ttk::entry widgets on macOS to allow them to access the Services menu.
+Most Mac applications support platform-native API's that allow them to work cooperatively with other applications in processing data. The two primary API's are the [NSServices API](https://developer.apple.com/library/archive/documentation/Cocoa/Conceptual/SysServices/introduction.html#//apple_ref/doc/uid/10000101-SW1) and the [Apple Events API](https://developer.apple.com/documentation/applicationservices/apple_event_manager?language=objc). The Services API is similar to a Unix pipeline API where data may be sent from one application to another for processing in some form. The Apple Events API is a more complex mechanism where an application will expose one or many commands that can be accessed from other applications for sophisticated scripting. Tk has historically supported many of the Apple Event API's but not the Services API. This TIP proposes to add support for the Services API and additional commands and changes to the Apple Event API. It also proposes a utility command that will support Tk's platform integration. Finally, it proposes additional behaviors to the **text**, **entry**, and **ttk::entry** widgets on macOS to allow them to access the Services menu.
 
 # Specification and Documentation
 
-The following commands, which will all be documented in the tk::mac section of the Tk man page, will be added with this TIP: 
+The following commands, which will all be documented in the **tk::mac** section of the Tk man page, will be added with this TIP: 
 
 ## ::tk::mac::PerformService
 
@@ -32,10 +32,10 @@ Executes a Tcl procedure called from the macOS "Services" menu by another applic
 		set data [clipboard get]
 		$w insert end $data
 	}
-	
+
 Note that the mechanism for retrieving inter-application data is from the clipboard; there is no other supported way to obtain the data. If the Services process is not desired, the NSServices keys can be deleted from the application's Info.plist file. 
 
-The underlying code supporting this command also allows the text, entry and ttk::entry widgets to access/consume services from other applications via the Services menu. 
+The underlying code supporting this command also allows the **text**, **entry** and **ttk::entry** widgets to access/consume services from other applications via the Services menu. 
 In the implementation of this TIP, these widgets have additional bindings on the Mac that will append selected text to the clipboard, making that data available to be sent to other applications via the Services menu. 
 
 ## ::tk::mac::LaunchURL *URL...*
@@ -48,11 +48,11 @@ This utility command will return the current applications's file path. It will d
 
 ## ::tk::mac::PrintDocument *file...*
 
-This command, which is designed to respond to the "print" Apple Event to print a document, is already present in Tk, but is currently broken. The current implementation takes a list of files as its parameter, but instead triggers ::tk::mac::OpenDocument command. This new implementation changes the signature to a single file path and works much more simply and effectively.  
+This command, which is designed to respond to the "print" Apple Event to print a document, is already present in Tk, but is currently broken. The current implementation takes a list of files as its parameter, but instead triggers **::tk::mac::OpenDocument** command. This new implementation changes the signature to a single file path and works much more simply and effectively.
 
 # Implementation
 
-An implementation of this TIP is present in the [mac_services](https://core.tcl-lang.org/tk/timeline?r=mac_services) branch. 
+An implementation of this TIP is present in the [mac_services](/tk/timeline?r=mac_services) branch.
 
 # Testing
 
@@ -73,43 +73,58 @@ To test the new functionality in this TIP, follow these steps:
 
 It is necessary for Wish to be running the sourced script for the new commands to work correctly. The use case for these commands is not running Wish from the command line and simple scripts, but rather as part of standalone applications where these commands are defined and customized for that application's specific functionality.
 
-**service_test.tcl**
+## Support script: service_test.tcl
 
 	proc ::tk::mac::LaunchURL {url} {
-	   tk_messageBox -message "Opened $url"
+		tk_messageBox -message "Opened $url"
 	}
 
 	proc ::tk::mac::PrintDocument {args} {
-		  foreach f $args {tk_messageBox -message "print $f"}  
+		foreach f $args {
+			tk_messageBox -message "print $f"
+		}
 	}
 
 	proc ::tk::mac::OpenDocument {args} {
-		foreach f $args {tk_messageBox -message $f}
+		foreach f $args {
+			tk_messageBox -message $f
+		}
 	}
 
-	proc ::tk::mac::Quit {args} {  
-	   exit
+	proc ::tk::mac::Quit {args} {
+		exit
 	}
 
 	proc appPath {} {
-		tk_messageBox -message "The app path is [::tk::mac::GetAppPath]"
+		tk_messageBox -message \
+			"The app path is [::tk::mac::GetAppPath]"
 	}
 	
 	proc ::tk::mac::PerformService {} {
-    	set data [clipboard get]
-    	tk_messageBox -message $data
+		set data [clipboard get]
+		tk_messageBox -message $data
 	}
 
 	proc main {} {
-
 		wm title . "IPC Test"
 
 		pack [text .t]
-		.t insert end "Select this text and select \"Services\" from the Apple menu; make sure Services for the Text Edit app are enabled. (You can select this in the System Preferences app.) You should see an option to \"Open new window in Text Edit with selected text.\" Choose that one.
+		.t insert end "Select this text and select \"Services\"\
+			from the Apple menu; make sure Services for the Text\
+			Edit app are enabled. (You can select this in the\
+			System Preferences app.) You should see an option to\
+			\"Open new window in Text Edit with selected text.\"\
+			Choose that one.
 
-		Also, from Text Edit, select the same text and choose \"Wish: Display Test Data\" from the Services menu. If you don't see it, you may need to run Wish to active the Services option in the System Preferences menu."
+		Also, from Text Edit, select the same text and choose\
+			\"Wish: Display Test Data\" from the Services menu. If\
+			you don't see it, you may need to run Wish to active\
+			the Services option in the System Preferences menu."
 
-		label .l -text "Enter text in the entry and ttk::entry fields\nbelow, select that text, and then follow\nthe directions above: the text\nshould be displayed in a new Text Edit window." 
+		label .l -text "Enter text in the entry and ttk::entry\
+			fields\nbelow, select that text, and then follow\nthe\
+			directions above: the text\nshould be displayed in a\
+			new Text Edit window." 
 
 		entry .te
 		ttk::entry .tte
@@ -117,12 +132,11 @@ It is necessary for Wish to be running the sourced script for the new commands t
 		button .b -text "Exit" -command ::tk::mac::Quit
 		button .e -text "Get App Path" -command appPath
 		pack .l .tte .te .e .b 
-	  
 	}
 
 	main
 
-**service_test.applescript**
+## Support Script: service_test.applescript
 
 	--service_test.applescript
 	tell application "/Library/Frameworks/Tk.framework/Versions/8.6/Resources/Wish.app"
@@ -137,5 +151,3 @@ It is necessary for Wish to be running the sourced script for the new commands t
 # Copyright
 
 This document has been placed in the public domain.
-
-
