Updated where TIP 167's implementation is.

--- a/tip/167.md
+++ b/tip/167.md
@@ -6,14 +6,14 @@
 	Created:        19-Nov-2003
 	Post-History:   
 	Tcl-Version:    8.7
-	Tk-Ticket:      845248ffffffffffffff
+	Tk-Branch:      tip-167
 -----
 
 # Abstract
 
 This TIP proposes adding a new option to **wm attributes** for the
 Windows version of Tk that offers contextual help in that window.
-Additionally, a new event type `<Help>` is defined, that will be
+Additionally, a new event type `<<Help>>` is defined, that will be
 delivered when the user picks the Help button in the window and picks
 over a widget.  The event will be also hitted when user presses F1
 over one window.
@@ -36,7 +36,7 @@ widget \(or location in a widget.\)  The typical program reaction to
 this is to offer a pop-up window with some short help text or to open
 the program help in the relevant section.
 
-Additionally, the new proposed event `<Help>` can also get
+Additionally, the new proposed event `<<Help>>` can also get
 information when user presses key F1 over one window.
 
 This implementation is proposed for the Windows OS only, though in the
@@ -54,28 +54,28 @@ syntax:
 If set and if the window is transient, the question mark button will
 appear in the window title bar.
 
-A new event `<Help>` is added to the event list so as a user can
+A new virtual event `<<Help>>` is added to the event list so as a user can
 do:
 
-	  bind $w <Help> {puts "You pressed widget %W"}
+	  bind $w <<Help>> {puts "You pressed widget %W"}
 
 This event will hit in two situations: when the user presses the
 question mark in the title bar of the window and pick a widget; and
 when user presses the F1 key \(or other platform-defined help key\) over
 one window \(this latter case only for bindings in the toplevel\).
 
-The event will support the usual %W %x %y substitutions and other
+The event will support the usual `%W`, `%x`, `%y` substitutions and other
 values.
 
 # Reference Implementation
 
-<http://sf.net/tracker/?func=detail&atid=312997&aid=845248&group\_id=12997>
+[Tk branch `tip-167`](/tk/timeline?r=tip-167)
+<http://sf.net/tracker/?func=detail&atid=312997&aid=845248&group_id=12997>
 
 # Comments
 
-It would be preferable to use a virtual event `<<Help>>` instead of extending the set of X events.  \(In particular, adding a new `<Help>` event means there has to be a new **HelpMask** bit flag to select for it, and we're running out of event mask bits\).
+It is preferable to use a virtual event `<<Help>>` instead of extending the set of X events.  \(In particular, adding a new `<Help>` event means there has to be a new **HelpMask** bit flag to select for it, and we're running out of event mask bits\).
 
 # Copyright
 
 This document has been placed in the public domain.
-
