Note that TIP 450 now has an implementation branch

--- a/tip/450.md
+++ b/tip/450.md
@@ -1,17 +1,18 @@
 # TIP 450: Add [binary] subcommand "set" for in-place modification
-	Author:		Arjen Markus <arjen.markus895@gmail.com>
-	State:		Draft
-	Type:		Project
-	Vote:		Pending
-	Created:	18-Jul-2016
+	Author:         Arjen Markus <arjen.markus895@gmail.com>
+	State:          Draft
+	Type:           Project
+	Vote:           Pending
+	Created:        18-Jul-2016
 	Post-History: 
-	Tcl-Version:	8.7
-	Keywords:	Tcl, binary data
+	Tcl-Version:    8.7
+	Keywords:       Tcl, binary data
+	Tcl-Branch:     tip-450
 -----
 
 # Abstract
 
-This TIP proposes a simpler extension of the [binary] command than the related
+This TIP proposes a simpler extension of the **binary** command than the related
 [[418]](418.md), namely just a subcommand **set** that updates an existing byte array
 in a variable instead of creating a new one like **binary format**. It does
 not propose an extension of the various formatting codes.
@@ -53,9 +54,9 @@ Besides the nominal case of a variable that contains a binary array that is to
 be updated within the bounds of that array, three other cases exist and need
 to be prepared for:
 
- * The variable varName does not exist yet
+ * The variable _varName_ does not exist yet
 
- * The variable varName does not contain a binary array
+ * The variable _varName_ does not contain a binary array
 
  * The updating would go past the memory allocated for the binary array
 
