TIP545: fine-tune the wording to the implementation

--- a/tip/545.md
+++ b/tip/545.md
@@ -25,7 +25,10 @@ This TIP included two components:
 
 Remove the option "-unit", which has no effect.
 The given unit is used to set the unit of the intermediate set of polygons.
-The final unit is pixel anyway, so setting this to anything else than pixels does not make sense.
+
+The final unit will be pixels anyway, undependent on any intermediate unit.
+Image width and height is in pixel.
+There is no other unit available for image width or height.
 
 ## Add a possibility to scale to a given width or height in pixels
 
@@ -38,7 +41,7 @@ The current solution to render a svg to a given height "$height" is:
     set imageHeight [image height p]
     p configure [list svg -scale [expr {double($height) / $imageHeight}]
 
-This two step procedure has a high performance impact, as the image is rendered twice.
+This two step procedure has a high performance impact, as the image is loaded twice.
 The aim is to render it only once by one parameter.
 
 # Specification
@@ -60,7 +63,7 @@ The required height is 16 pixels:
     % image width p
     32
 
-The entier argument must be positive.
+The entier argument must be greater to 0.
 The option may not be specified together with "-scale" and/or "-scaletowidth".
 
 ## Add new option -scaletowidth
@@ -78,13 +81,12 @@ The required width is 16 pixels:
     % image height p
     8
 
-The entier argument must be positive.
+The entier argument must be greater than 0.
 The option may not be specified together with "-scale" and/or "-scaletoheight".
 
 # Implementation
 
-Implementation may start soon with the tag tip-545-svg-options.
-
+Implementation is ready in branch tip-545-svg-options.
 
 # Copyright
 
