Clean up some awkward language; thanks to AK for spotting.

--- a/tip/536.md
+++ b/tip/536.md
@@ -24,7 +24,7 @@ The following commands, which will all be documented in the **tk::mac** section 
 
 ## ::tk::mac::PerformService
 
-Executes a Tcl procedure called from the macOS "Services" menu by another application in the Apple menu item. The "Services" menu item allows for inter-application communication; data from one application, such as selected text, can be sent to another application for processing, for example to Safari as a search item for Google, or to TextEdit to be appended to a file. An example this procedure is below and should should be rewritten in an application script for customization, which will allow a Tk application to expose "Service" functionality to other programs: 
+Executes a Tcl procedure called from the macOS "Services" menu by another application in the Apple menu item. The "Services" menu item allows for inter-application communication; data from one application, such as selected text, can be sent to another application for processing, for example to Safari as a search item for Google, or to TextEdit to be appended to a file. An example of this procedure, which will allow a Tk application to expose "Service" functionality to other programs (it should be customised in a application script; these are inherently non-generic): 
 
 	proc ::tk::mac::PerformService {} {
 		set w [text .t]
