--- a/tip/542.md
+++ b/tip/542.md
@@ -16,7 +16,7 @@
 
 This TIP proposes being able to switch Tcl between Full Unicode mode
 (TCL\_UTF\_MAX>3, almost compatible with Androwish) and current partial
-Unicode mode (as far as TIP #389 goes, using TCL\_UTF\_MAX=3) 
+Unicode mode (as far as TIP #389 goes, using `TCL_UTF_MAX=3`) 
 
 # Rationale
 
