--- a/tip/543.md
+++ b/tip/543.md
@@ -1,4 +1,4 @@
-# TIP 543: Eliminate TCL\_INTERP\_DESTROYED flag value
+# TIP 543: Eliminate `TCL_INTERP_DESTROYED` flag value
 	Author:         Don Porter <dgp@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
