--- a/tip/548.md
+++ b/tip/548.md
@@ -1,4 +1,4 @@
-# TIP 548:Deprecate Tcl\_WinUtfToTChar() and Tcl\_WinTCharToUtf() and provide more flexible replacement functions.
+# TIP 548:Deprecate `Tcl_WinUtfToTChar()` and `Tcl_WinTCharToUtf()` and provide more flexible replacement functions.
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
@@ -14,13 +14,13 @@
 
 # Abstract
 
-This TIP proposes to deprecate Tcl\_WinUtfToTChar() and Tcl\_WinTCharToUtf() and provide more flexible replacement functions.
+This TIP proposes to deprecate `Tcl_WinUtfToTChar()` and `Tcl_WinTCharToUtf()` and provide more flexible replacement functions.
 
 # Rationale
 
-The functions Tcl\_WinUtfToTChar() and Tcl\_WinTCharToUtf() originally were functions able to do two different conversions,
+The functions `Tcl_WinUtfToTChar()` and `Tcl_WinTCharToUtf()` originally were functions able to do two different conversions,
 depending on the runtime platform: On Windows 95/98/ME they performed conversions between Utf-8 and the Windows default encoding
-(usually cp1252), on later Windows versions they convert between Utf-8 and Utf-16. The length parameter of Tcl\_WinTCharToUtf()
+(usually cp1252), on later Windows versions they convert between Utf-8 and Utf-16. The length parameter of `Tcl_WinTCharToUtf()`
 always was in bytes, but most other Unicode-related Tcl functions expect their length in Unicode characters.
 
 Since Windows 95/98/ME are not supported any more, it's time to fix this inconsistency.
@@ -31,9 +31,9 @@ This document proposes:
 
  * Deprecate the following functions:
 
-     Tcl\_WinUtfToTChar()
+     `Tcl_WinUtfToTChar()`
 
-     Tcl\_WinTCharToUtf()
+     `Tcl_WinTCharToUtf()`
 
    If Tcl is compiled with either -DTCL\_UTF\_MAX=6 (which is not officially supported) or -DTCL\_NO\_DEPRECATED, those functions will
    no longer be available. In Tcl 9.0, those functions will be completely removed.
@@ -43,16 +43,16 @@ This document proposes:
 
  * New replacement functions:
 
-     Tcl\_UtfToUtf16DString(), replaces Tcl\_WinUtfToTChar()
+     `Tcl_UtfToUtf16DString()`, replaces `Tcl_WinUtfToTChar()`
 
-     Tcl\_Utf16ToUtfDString(), replaces Tcl\_WinTCharToUtf()
+     `Tcl_Utf16ToUtfDString()`, replaces `Tcl_WinTCharToUtf()`
 
-     Those are the same as the already existing _UniChar_ variants (Tcl\_UniCharToUtfDString/Tcl\_UtfToUniCharDString), but they use an "unsigned short"
+     Those are the same as the already existing _UniChar_ variants (`Tcl_UniCharToUtfDString`/`Tcl_UtfToUniCharDString`), but they use an "unsigned short"
      pointer type in their signature stead of a "Tcl\_UniChar" pointer type, which is always 16-bits.
-     Tcl\_Utf16ToUtfDString() accepts - just as Tcl\_UniCharToUtfDString() - the value -1 as length parameter.
+     `Tcl_Utf16ToUtfDString()` accepts - just as `Tcl_UniCharToUtfDString()` - the value -1 as length parameter.
 
-     Those functions can be used if you want your extension to compile with -DTCL\_UTF\_MAX=3, -DTCL\_UTF\_MAX=4 or -DTCL\_UTF\_MAX=6,
-     but still want to use the 16-bit conversions independent on the TCL\_UTF\_MAX setting or Tcl\_UniChar type.
+     Those functions can be used if you want your extension to compile with `-DTCL_UTF_MAX=3`, `-DTCL_UTF_MAX=4` or `-DTCL_UTF_MAX=6`,
+     but still want to use the 16-bit conversions independent on the `TCL_UTF_MAX` setting or Tcl\_UniChar type.
 
      Those functions are available on all platforms, not only Windows.
 
@@ -60,29 +60,29 @@ This document proposes:
 
 In your extension, replace the call:
 
-     Tcl_WinUtfToTChar(....., bufPtr);
+     `Tcl_WinUtfToTChar(....., bufPtr)`;
      
 with the following two lines:
 
-     Tcl_DStringInit(bufPtr);
-     Tcl_UtfToUtf16DString(....., bufPtr);
+     `Tcl_DStringInit(bufPtr);`
+     `Tcl_UtfToUtf16DString(....., bufPtr);`
 
 And also, replace:
 
-     Tcl_WinTCharToUtf(....., bufPtr);
+     `Tcl_WinTCharToUtf(....., bufPtr);`
      
 with the following two lines:
 
-     Tcl_DStringInit(bufPtr);
-     Tcl_Utf16ToUtfDString(....., bufPtr);
+     `Tcl_DStringInit(bufPtr);`
+     `Tcl_Utf16ToUtfDString(....., bufPtr);`
 
-If the Tcl\_WinTCharToUtf() call originally had a "length" parameter not equal to -1, divide it by 2 (or ... don't multiply it by 2 any more).
+If the `Tcl_WinTCharToUtf()` call originally had a "length" parameter not equal to -1, divide it by 2 (or ... don't multiply it by 2 any more).
 
 
 # Compatibility
 
-This is fully upwards compatible in Tcl 8.x, except if Tcl is compiled with -DTCL\_UTF\_MAX=6 (not officially supported) or
--DTCL\_NO\_DEPRECATED. Starting with Tcl 9.0, the replacement functions should be used in stead.
+This is fully upwards compatible in Tcl 8.x, except if Tcl is compiled with `-DTCL_UTF_MAX=6` (not officially supported) or
+`-DTCL_NO_DEPRECATED`. Starting with Tcl 9.0, the replacement functions should be used in stead.
 
 # Reference Implementation
 
