Update TIP with experience of implementing it

--- a/tip/450.md
+++ b/tip/450.md
@@ -1,5 +1,6 @@
 # TIP 450: Add [binary] subcommand "set" for in-place modification
 	Author:         Arjen Markus <arjen.markus895@gmail.com>
+	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
@@ -51,44 +52,30 @@ necessary anymore.
 # Implementation Notes
 
 Besides the nominal case of a variable that contains a binary array that is to
-be updated within the bounds of that array, three other cases exist and need
+be updated within the bounds of that array, four other cases exist and need
 to be prepared for:
 
- * The variable _varName_ does not exist yet
+ * The variable _varName_ does not exist yet: we must create the
+   variable when writing back the binary value.
 
- * The variable _varName_ does not contain a binary array
+ * The variable _varName_ does not contain a binary string: we must
+   convert the variable to a binary string (using the usual algorithm).
 
- * The updating would go past the memory allocated for the binary array
+ * The variable _varName_ contains a binary string that is shared with
+   other uses (such as being stored in other variables): we must
+   duplicate the binary string in this case before updating it.
 
-Each of these cases and perhaps others will have to be taken care of. The
-first case might be treated as if **binary format** was meant. For the
-second case the implementation can convert the current value.
-
-The third case might either cause an error \(we are updating an existing block
-of memory after all\) or silently extend the memory, effectively performing
-what the Tcl implementation shown above would do. If an error is thrown, then
-the first case should probably throw an error as well.
+ * The updating would go past the memory allocated for the binary
+   array: we must extend the binary array.
+   
+_It is the Tcl programmer's responsibility to avoid these cases if they
+matter to them._ The **binary set** command will act in accordance
+with existing Tcl standard semantics.
 
 # Reference Implementation
 
-To be committed to a fossil branch.
-
-A few remarks:
-
- * The third case is not completely treated yet \(see "TODO" in the code\)
-
- * The **binary set** command does not properly invalidate the string
-   representation. The binary array is, however, updated properly - at least
-   according to the very limited tests that were performed.
-
- * There are no proper test cases yet.
-
- * There is no proper performance measurement yet; this could be based
-   on Wiki page <http://wiki.tcl.tk/44363.>
-
- * It does not deal with the possibility that the binary array is shared.
+See the `tip-450` branch.
 
 # Copyright
 
 This document is placed in public domain.
-
